infra/k8s/pg-ss.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg-srv
spec:
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None
  selector:
    app: pg-ss
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pg-ss
spec:
  selector:
    matchLabels:
      app: pg-ss
  serviceName: "pg-srv"
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: pg-ss
    spec:
      containers:
        - name: pg-ss
          image: postgres
          volumeMounts:
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d/init.sql
              subPath: init.sql
            - name: postgres-data
              mountPath: /var/lib/postgresql/pgdata
      volumes:
        - name: init-script
          configMap:
            name: pg-init-script
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
