infra/k8s/user-pg-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-pg-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-pg
  template:
    metadata:
      labels:
        app: user-pg
    spec:
      containers:
        - name: user-pg
          image: postgres
          volumeMounts:
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d/init.sql
              subPath: init.sql
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: init-script
          configMap:
            name: pg-init-script
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: user-pg-srv
spec:
  selector:
    app: user-pg
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
