infra/k8s/websocket-gateway-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-gateway-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websocket-gateway
  template:
    metadata:
      labels:
        app: websocket-gateway
    spec:
      containers:
        - name: websocket-gateway
          image: faheem222/websocket-gateway
---
apiVersion: v1
kind: Service
metadata:
  name: websocket-gateway-srv
spec:
  type: ClusterIP
  selector:
    app: websocket-gateway
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800 # 3 hours
